--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
         <activity android:name=".CrimeListActivity">
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
@@ -22,7 +23,6 @@
             <meta-data android:name="android.support.PARENT_ACTIVITY"
                 android:value=".CrimeListActivity"/>
         </activity>
-
     </application>
 
 </manifest>
