--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,29 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="edu.josephkorang.criminalintent" >
+    package="edu.josephkorang.criminalintent">
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+
+    <uses-feature android:name="android.hardware.camera" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity android:name=".CrimeListActivity">
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
 
-        <activity android:name=".CrimeActivity" >
-            <meta-data android:name="android.support.PARENT_ACTIVITY"
-                android:value=".CrimeListActivity"/>
+        <activity android:name=".CrimeActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".CrimeListActivity" />
         </activity>
-        <activity android:name=".CrimePagerActivity" >
-            <meta-data android:name="android.support.PARENT_ACTIVITY"
-                android:value=".CrimeListActivity"/>
+        <activity android:name=".CrimePagerActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".CrimeListActivity" />
         </activity>
+
+        <activity
+            android:name=".CrimeCameraActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="landscape"></activity>
     </application>
 
 </manifest>
